add  some SEO optimization

--- a/public/index.html
+++ b/public/index.html
@@ -9,6 +9,13 @@
       name="description"
       content="Сварочные работы в Краснодарском крае и Адыгее"
     />
+    <meta name="keywords" content="Сварочные работы Краснодарский край 
+    Сварочные работы Адыгея сварка Кубань сварка Краснодар 
+    сварка Адыгея ремонт кузова сварка труб 
+    мебель лофт Краснодар Майкоп  Сварные навесы Сварные козырьки
+    сварка стали 
+    Ремонт и монтаж бортов"/>
+
     <link rel="apple-touch-icon" href="%PUBLIC_URL%/logo192.png" />
     <!--
       manifest.json provides metadata used when your web app is installed on a
