add some seo and change contacts data

--- a/public/index.html
+++ b/public/index.html
@@ -2,19 +2,20 @@
 <html lang="en">
   <head>
     <meta charset="utf-8" />
-    <link rel="icon" href="%PUBLIC_URL%/favicon.ico" />
+    <!-- <link rel="icon" href="%PUBLIC_URL%/favicon.ico" /> -->
+    <link rel="icon" href="%PUBLIC_URL%/welding.png" />
     <meta name="viewport" content="width=device-width, initial-scale=1" />
     <meta name="theme-color" content="#000000" />
     <meta
       name="description"
       content="Сварочные работы в Краснодарском крае и Адыгее"
     />
-    <meta name="keywords" content="Сварочные работы Краснодарский край 
-    Сварочные работы Адыгея сварка Кубань сварка Краснодар 
-    сварка Адыгея ремонт кузова сварка труб 
-    мебель лофт Краснодар Майкоп  Сварные навесы Сварные козырьки
-    сварка стали 
-    Ремонт и монтаж бортов"/>
+    <meta name="keywords" content="Сварочные работы Краснодарский край,
+    Сварочные работы Адыгея, сварка Кубань, сварка Краснодар,
+    сварка Адыгея, ремонт кузова Краснодар Белореченск Майкоп, сварка труб Краснодар Белореченск Майкоп, 
+    мебель лофт Краснодар Белореченск Майкоп, Сварные навесы Краснодар Белореченск Майкоп, Сварные козырьки Краснодар Белореченск Майкоп,
+    сварка стали Краснодар Белореченск Майкоп,
+    Ремонт и монтаж бортов Краснодар Белореченск Майкоп"/>
 
     <link rel="apple-touch-icon" href="%PUBLIC_URL%/logo192.png" />
     <!--
